# http-cli

./: Cargo.toml  LICENSE  README.md
src/: extract_information.rs  get_brief.rs  get_document.rs  html_to_markdown.rs  main.rs  render_markdown.rs
