[package]
name = "http-cli"
version = "1.0.0"
edition = "2024"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/akagiyuu/http-status"
homepage = "https://github.com/akagiyuu/http-status"
description = """
A CLI to fetch HTTP status infomation 
"""

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
htmd = "0.1.6"
http = "1.2.0"
reqwest = "0.12.11"
scraper = "0.22.0"
tokio = { version = "1.42.0", features = ["full"] }
